# Novryn

./: .env.example  .gitignore  alembic.ini  pyproject.toml
.planning/: PROJECT.md
novryn/: __init__.py  config.py
novryn/db/: __init__.py  base.py  engine.py  ids.py  models.py  serialization.py
novryn/db/migrations/: env.py
novryn/db/migrations/versions/: 001_schema_foundation.py  002_soft_delete_and_fts.py  003_intelligence_domain.py
novryn/domain/: __init__.py  errors.py  events.py
novryn/repositories/: __init__.py  dependency_read.py  event_repository.py  focus_read.py  insights_read.py  memory_read.py  pattern_read.py  task_read.py  uow.py
novryn/services/: __init__.py  attachment_service.py  dependency_service.py  focus_service.py  hierarchy_service.py  memory_service.py  pattern_service.py  session_service.py  task_service.py
tests/: conftest.py  test_uuid7_monotonic.py
tests/integration/: conftest.py  test_append_only.py  test_atomic_event.py  test_attachments.py  test_behavior_patterns.py  test_checks.py  test_create_subtasks.py  test_daily_focus.py  test_dependencies.py  test_insights.py  test_memory_search.py  test_migration.py  test_migration_002.py  test_migration_003.py  test_partitioning.py  test_search.py  test_sessions.py  test_task_crud.py  test_task_lifecycle.py  test_tree.py  test_uow_many.py  test_uow_snapshot.py  test_user_memory.py
