[project]
name = "novryn"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.0.51",
    "structlog>=26.1.0",
    "uuid-utils==0.16.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff>=0.15.18",
    "testcontainers==4.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["novryn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
